# vkfw

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  GNUmakefile  OPTIONS.txt  README  TODOLIST  example.cc  example.frag.glsl  example.frag.txt  example.vert.glsl  example.vert.txt  gen_vkfunctions.py  run  x86_64-w64-mingw32.cmake
Documentation/: X11_donts.txt  event_handling.txt  xkb_wtf.txt
core/: event.cc  keyboard.cc  logging.cc  vk_context.cc  vk_functions.cc  vkfw.cc  window.cc
include/VKFW/: event.h  logging.h  options.h  platform.h  vector.h  vk_functions.h  vkfw.h  warn_internal.h  window.h  window_api.h
unix/: platform.cc
wayland/: connection.cc  csd_close_button.cc  default_cursor.cc  event.cc  event.h  generate_protocols.sh  input.cc  input.h  wayland-protocol.c  wayland.h  wayland_functions.h  window.cc  window.h
win32/: TODOLIST  backend.cc  event.cc  event.h  platform.cc  utils.cc  utils.h  win32.h  window.cc  window.h
xcb/: TODOLIST  connection.cc  event.cc  event.h  keyboard.cc  keyboard.h  validate.cc  window.cc  window.h  xcb.h  xcb_xkb.h  xkb.h
